Cleans up html, seperates footer and header in jsp-fragments

--- a/WebContent/signUp.html
+++ b/WebContent/signUp.html
@@ -1,27 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta charset="UTF-8">
-<title>Sign Up</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-<div id="container">
-<header>
-<h1><span>User Management System</span></h1>
-<nav>
-<ul>
-<li><a href="Controller">Home</a></li>
-<li><a href="Controller?action=overview">Overview</a></li>
-<li id="actual"><a href="Controller?action=signUp">Sign up</a></li>
-</ul>
-</nav>
-<h2>
-Sign Up
-</h2>
-
-</header><main>
+<!-- header signUp=actual -->
+<main>
 	<div class="alert-danger">
 		<ul>
 			<li>Some error</li>
@@ -41,11 +19,4 @@ Sign Up
         
     </form>
 </main>
-<footer>
-&copy; Webontwikkeling 3, UC Leuven-Limburg
-</footer>
-</div>
-</body>
-</html>
-
-
+<!-- footer -->
